crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__raw_named_fields_error.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
::core::compile_error! {
    "Raw can only be derived for tuple structs (newtype pattern)"
}
