crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__raw_with_custom_type.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
impl ::templated_uri::Raw for CustomFragment {
    fn raw(&self) -> impl ::std::fmt::Display {
        &self.0
    }
}
