crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__templated_unredacted_uri_impl.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
struct Test {
    param: String,
    param2: EscapedString,
    param3: String,
    param4: String,
}
impl ::templated_uri::PathAndQueryTemplate for Test {
    fn template(&self) -> &'static core::primitive::str {
        "/example.com/{param}/{+param2}{/param3,param4}"
    }
    fn format_template(&self) -> &'static core::primitive::str {
        "/example.com/{param}/{param2}/{param3}/{param4}"
    }
    fn label(&self) -> ::core::option::Option<&'static core::primitive::str> {
        ::core::option::Option::None
    }
    fn render(&self) -> ::std::string::String {
        let mut __out = ::std::string::String::with_capacity(80usize);
        ::templated_uri::PathAndQueryTemplate::render_into(self, &mut __out);
        __out
    }
    fn render_into(&self, __out: &mut ::std::string::String) {
        __out.push_str("/example.com/");
        ::templated_uri::Escape::escape_into(&self.param, __out);
        __out.push_str("/");
        ::templated_uri::Raw::raw_into(&self.param2, __out);
        __out.push_str("/");
        ::templated_uri::Escape::escape_into(&self.param3, __out);
        __out.push_str("/");
        ::templated_uri::Escape::escape_into(&self.param4, __out);
    }
    fn render_capacity_hint(&self) -> ::core::primitive::usize {
        80usize
    }
    fn to_path_and_query(
        &self,
    ) -> ::std::result::Result<
        ::templated_uri::__private::http::uri::PathAndQuery,
        ::templated_uri::UriError,
    > {
        Ok(
            ::templated_uri::__private::http::uri::PathAndQuery::try_from(
                ::templated_uri::PathAndQueryTemplate::render(self),
            )?,
        )
    }
}
impl ::std::fmt::Debug for Test {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.debug_tuple("Test")
            .field(&"/example.com/{param}/{+param2}{/param3,param4}")
            .finish()
    }
}
impl ::templated_uri::__private::RedactedDisplay for Test {
    fn fmt(
        &self,
        redactor: &dyn ::templated_uri::__private::Redactor,
        f: &mut ::std::fmt::Formatter,
    ) -> ::std::fmt::Result {
        f.write_str("/example.com/")?;
        ::std::write!(f, "{}", self.param)?;
        f.write_str("/")?;
        ::std::write!(f, "{}", self.param2)?;
        f.write_str("/")?;
        ::std::write!(f, "{}", self.param3)?;
        f.write_str("/")?;
        ::std::write!(f, "{}", self.param4)?;
        ::std::result::Result::Ok(())
    }
}
impl From<Test> for ::templated_uri::PathAndQuery {
    fn from(value: Test) -> Self {
        ::templated_uri::PathAndQuery::from_template(value)
    }
}
