crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__union_not_supported_error.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
::core::compile_error! {
    "Unions are not supported for TemplatedUri"
}
