crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__uri_param_union_error.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
::core::compile_error! {
    "Escape cannot be derived for unions"
}
